--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -318,17 +318,21 @@
     position: relative;
     z-index: 0;
     padding: 10px 30px 0 30px;
-    #category_title {
-        font-size: inherit;
-        a {
-            font-family: "Roboto Condensed Light";
-            color: #212529;
-            margin-bottom: 0.5rem !important;
-            &:hover {
-                text-decoration: none;
-                color: inherit;
-            }
+    a {
+        &:hover {
+            text-decoration: none;
+            color: inherit;
         }
+    }
+    #category_title {
+        color: #4abeb6;
+        text-transform: uppercase;
+        font-style: italic;
+        font-family: "Playfair Display";
+        font-weight: 400;
+        font-size: 1rem;
+        white-space: nowrap;
+        display: inline;
     }
     .authors {
         display: flex;
@@ -348,18 +352,6 @@
         text-shadow: 1px 1px #191919;
         font-size: 50px;
         font-family: "Roboto Condensed Bold", sans-serif;
-    }
-    h3 a {
-        font-size: 15px;
-        font-family: "Roboto Condensed Bold", sans-serif;
-        margin: 0;
-        margin-top: 23px;
-        font-weight: lighter;
-        text-transform: uppercase;
-        a {
-            text-decoration: none;
-            color: #333;
-        }
     }
 }
 
