--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -54,27 +54,45 @@
             <% end %>
             <h1 class="title_article_show"><%= @post.title %></h1>
           </div>
-          <h3 id="category_title"><%= link_to(@post.category.name, @post.category) %></h3>
-          <div class="post_info">
+          <div class="d-flex align-items-center justify-content-between pb-2">
+            <%= link_to @post.category do %>
+              <h3 class="m-0 text-nowrap" id="category_title">
+                <%= @post.category.name %>
+              </h3>
+            <% end %>
+            <div>
+              <p class="text-nowrap m-0">
+                <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512">
+                  <path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path>
+                </svg>
+                <%= date_to_words(@date) %>
+              </p>
+            </div>
+          </div>
+          <div style="height: 57px;" class="post_info d-flex flex-wrap overflow-hidden align-items-center justify-content-between pb-2">
             <% @authors = [@user] + @collabs %>
-            <div class="left_side_flex">
+            <div class="pt-2">
               <% @authors.each do |author| %>
-                <div class="author">
+                <div class="author d-table-cell align-middle">
                   <% @profile = author.profile.attached? ? author.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
                   <%= image_tag(@profile, :class => "profile_img") %>
-                  <p class="author_name" style="margin-right: 10px;">By <%= link_to(author.full_name, author) %></p>
+                  <p class="author_name m-0 mr-2">By <%= link_to(author.full_name, author) %></p>
                 </div>
               <% end %>
             </div>
-            <div class="right_side_wrapper <% if @authors.count == 1 %>right_side_flex<% end %>">
-              <div class="date_wrapper draft date_wrapper_draft">
-                <p>
-                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512">
-                    <path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path>
-                  </svg>
-                </p>
-                <p class="date"><%= date_to_words(@date) %></p>
-              </div>
+            <div class="pt-2">
+              <p class="date m-0">
+                <span>
+                  <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= @post.post_impressions %>
+                </span>
+                <% if !@post.comments_turned_off %>
+                  <%= link_to "#comments" do %>
+                    <span class="ml-3" style="margin-top: -2px;" >
+                      <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" class="fa-secondary" d="M256 32C114.6 32 .0272 125.1 .0272 240c0 49.63 21.35 94.98 56.97 130.7c-12.5 50.37-54.27 95.27-54.77 95.77c-2.25 2.25-2.875 5.734-1.5 8.734C1.979 478.2 4.75 480 8 480c66.25 0 115.1-31.76 140.6-51.39C181.2 440.9 217.6 448 256 448c141.4 0 255.1-93.13 255.1-208S397.4 32 256 32z"/></svg> <%= @post.comments.published.count %>
+                    </span>
+                  <% end %>
+                <% end %>
+              </p>
             </div>
           </div>
         </header>
@@ -104,7 +122,7 @@
                 <% end %>
               </div>
               <% if !@post.comments_turned_off %>
-                <div class="share_article_feedback pb-0 pr-0 pl-0">
+                <div id="comments" class="share_article_feedback pb-0 pr-0 pl-0">
                   <%= render_async_cache get_comments_published_path(post_id: @post.id, user_id: @user.id), retry_count: 3 %>
                 </div>
               <% end %>
