--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -327,7 +327,7 @@
     .applies {
         width: 100% !important;
     }
-    .articles2-6 .date {
-        display: none;
+    .articles2-6 .d-table-cell {
+        display: none !important;
     }
 }
