--- a/app/views/welcome/partials/_hero.html.erb
+++ b/app/views/welcome/partials/_hero.html.erb
@@ -6,8 +6,14 @@
           <%=link_to(image_tag(@posts_approved_0[0].thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
         </div>
         <h3 class="article_title"><%= link_to @posts_approved_0[0].title, @posts_approved_0[0] %></h3>
-        <p class="mb-0 date"><%= date_to_words(@posts_approved_0[0].publish_at) %>, Featured article</p>
-        <%= render 'posts/partials/views_and_comments', post: @posts_approved_0[0] %>
+        <div class="d-table-cell align-middle pt-2">
+          <div class="author d-inline">
+            <% @profile = @posts_approved_0[0].user.profile.attached? ? @posts_approved_0[0].user.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
+            <%= image_tag(@profile, :class => "profile_img", :style => "max-width: 20px !important; min-width: 20px !important; height: 20px;") %>
+            <%= link_to("#{@posts_approved_0[0].user.full_name}, ", @posts_approved_0[0].user, class: 'date') %>
+          </div>
+          <span>Featured article</span>
+        </div>
       </div>
     </div>
     <div class="articles2-6">
@@ -16,7 +22,14 @@
           <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [300,150], format: 'webp'), alt: post.title, :class => "image_thumbnail"), post )%>
           <div class="thumbnail--container">
             <h3 class="article_title"><%= link_to post.title.truncate_words(14), post %></h3>
-            <p class="date"><%= date_to_words(post.publish_at) %></p>
+            <div class="d-table-cell align-middle pt-2">
+              <div class="author d-inline">
+                <% @profile = post.user.profile.attached? ? post.user.profile.variant(resize_to_fill: [100,100]) : "profile_image.jpg" %>
+                <%= image_tag(@profile, :class => "profile_img", :style => "max-width: 20px !important; min-width: 20px !important; height: 20px;") %>
+                <%= link_to("#{post.user.full_name}, ", post.user, class: 'date') %>
+              </div>
+              <span><%= date_to_words(post.publish_at) %></span>
+            </div>
           </div>
         </div>
       <% end %>
