--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,4 @@
+  
 <li class="list-group-item comment" id="comment_<%= comment.id %>" style="width: 100%;">
   <% if (current_user.present? && ((comment.user_id.eql? current_user.id) || (comment.post.user_id.eql? current_user.id) || (current_user.admin))) || (!cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
     <%= link_to comment_path(comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "delete_btn_x", :remote => true, :style => "width: 15px !important;right: 0;position: absolute;z-index: 10;" do %>
@@ -17,6 +18,8 @@
         <span class="badge badge-default">Author</span>
       <% elsif comment.user.try(:editor).present? %>
         <span class="badge badge-default">Editor</span>
+      <% elsif comment.user.try(:marketer).present? %>
+        <span class="badge badge-default">Interviewer</span>
       <% elsif comment.user.present? %>
         <span class="badge badge-default">Writer</span>
       <% end %>
