--- a/app/views/comments/_comment_on_post.html.erb
+++ b/app/views/comments/_comment_on_post.html.erb
@@ -14,6 +14,6 @@
     </span>
   </div>
   <div class="li-link-wrapper">
-    <%= link_to("", post_path(comment.post, :comment_id => comment.id)) %>
+    <%= link_to("", "/#{comment.post.slug}?comment_id=#{comment.id}#comments") %>
   </div>
 </li>
