--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -71,7 +71,7 @@
       </li>
       <li class="nav-item tab-custom">
         <a class="tab-custom" id="all-comments-tab-classic" data-bs-toggle="tab" href="#all-comments-classic" role="tab"
-          aria-controls="all-comments-classic" aria-selected="false">All Comments</a>
+          aria-controls="all-comments-classic" aria-selected="false">Recent Comments</a>
       </li>
     </ul>
   </div>
