--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,3 @@
-  
 <li class="list-group-item comment" id="comment_<%= comment.id %>" style="width: 100%;">
   <% if (current_user.present? && ((comment.user_id.eql? current_user.id) || (comment.post.user_id.eql? current_user.id) || (current_user.admin))) || (!cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
     <%= link_to comment_path(comment), method: :delete, data: {confirm: "Are you sure you want to delete this comment?"}, class: "delete_btn_x", :remote => true, :style => "width: 15px !important;right: 0;position: absolute;z-index: 10;" do %>
@@ -24,7 +23,8 @@
         <span class="badge badge-default">Writer</span>
       <% end %>
     </h6>
-    <span class="date_ago"><%= time_ago_in_words(comment.created_at) %> ago</span><br>
+    <span class="date_ago"><%= time_ago_in_words(comment.created_at) %> ago</span>
+    <br>
     <% if comment.response_to.present? %>
       <span class="d-block">Commented on:
         <span id="anchor_link" style="font-size: 14px;" onclick="scrollToResponseText(`<%= comment.response_to %>`)" class="date_ago mb-2">
@@ -42,6 +42,7 @@
           <p class="mr-2 d-inline link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => cookies[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
         <% end %>
         <p class="d-inline link_theme"><%= link_to @reply_text, new_comment_path(parent_id: comment.id, :cookie => cookies[:cookie]), remote: true, class: "link_theme toggle_#{comment.id}", style: "font-size: 1em;" %></p>
+        <%= render :partial => 'posts/partials/like' %>
       </span>
     <% elsif (current_user.present? && (comment.user_id.eql? current_user.id)) || (!current_user.present? && !cookies[:cookie].nil? && (cookies[:cookie].eql? comment.cookie)) %>
       <p class="mr-2 mt-0 link_theme"><%= link_to "Edit", edit_comment_path(comment, :cookie => cookies[:cookie]), remote: true, class: "link_theme", style: "font-size: 1em;" %></p>
