--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -3,13 +3,15 @@
     <div class="btn_cntnr" style="margin-bottom: 0px;"><%= link_to "Pitch an Article", new_pitch_path, class: "newpost--new--profile" %></div>
     <div>
       <h1 class="pitch_ttl"><%= @title %></h1>
-      <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. If you change your mind later, you can unclaim the pitch. Deadlines are given for most editor pitches and become active once you claim a pitch. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</i>
-      <br>
-      <br>
-      <p style="display: inline;">Filter by category</p>
-      <%= form_for @pitch, method: "get" do |f| %>
-        <%= f.collection_select(:category_id, @categories, :id, :name, {include_blank: "All Pitches"}) %>
-        <%= f.submit "Apply filter", method: :index, id: "button_nrml" %>
+      <% if !(@title.eql? "Your Claimed Pitches") %>
+        <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. If you change your mind later, you can unclaim the pitch. Deadlines are given for most editor pitches and become active once you claim a pitch. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</i>
+        <br>
+        <br>
+        <p style="display: inline;">Filter by category</p>
+        <%= form_for @pitch, method: "get" do |f| %>
+          <%= f.collection_select(:category_id, @categories, :id, :name, {include_blank: "All Pitches"}) %>
+          <%= f.submit "Apply filter", method: :index, id: "button_nrml" %>
+        <% end %>
       <% end %>
       <br>
       <% if @pitches.count.eql? 0 %>
