--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -643,6 +643,7 @@ hr {
 .link_nrml {
     color: black;
     font-weight: 400;
+    text-decoration: underline !important;
     &:hover {
         color: #545454 !important;
     }
