--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -8,8 +8,8 @@
   <% @placeholder = (post.comments.where(comment_id: nil, public: post.is_published?).count.eql? 0) ? "Start the conversation" : "Share your thoughts on this article" %>
   <%= form_for(comment, remote: true, id: "submit-comment") do |f| %>
     <% if !current_user.present? %>
-      <%= f.text_field :full_name, :value => cookies[:full_name], :placeholder => "Full name", class: 'mt-0 full_name_0', style: 'margin-bottom: 10px', onkeyup: "isDisabled('0')" %>
-      <%= f.text_field :email, :value => cookies[:email], :placeholder => "Personal email", class: 'mt-0', style: 'margin-bottom: 10px' %>
+      <%= f.text_field :full_name, :value => cookies[:full_name], :placeholder => "Your name", class: 'mt-0 full_name_0', style: 'margin-bottom: 10px', onkeyup: "isDisabled('0')" %>
+      <%= f.text_field :email, :value => cookies[:email], :placeholder => "Email", class: 'mt-0', style: 'margin-bottom: 10px' %>
       <%= f.hidden_field :cookie, :value => (cookies[:cookie] || SecureRandom.urlsafe_base64) %>
     <% end %>
     <%= f.hidden_field :public, :value => post.is_published? %>
