--- a/app/views/pages/email_preferences.html.erb
+++ b/app/views/pages/email_preferences.html.erb
@@ -1,14 +1,17 @@
 <div class="skinny_wrapper" style="padding-top: 30px;">
   <h1>Update your email preferences</h1>
-  <p>Select which lists you would like to be subscribed to.</p>
+  <p>Select which lists you would like to be unsubscribed from.</p>
   <%= form_for(:pages, url:"/email-preferences?email=#{params[:email]}&id=#{params[:id]}") do |f| %>
     <%= f.hidden_field :email, :value => params[:email] %>
     <%= f.hidden_field :id, :value => params[:id] %>
     <p>
-      <%= f.check_box :newsletter, class: "text_field", :checked => @subscribed_to_readers %> Weekly newsletter
+      <%= f.check_box :newsletter, class: "text_field" %> Weekly editor picks
     </p>
     <p>
-      <%= f.check_box :writer, class: "text_field", :checked => @subscribed_to_writers %> All writer communication
+      <%= f.check_box :writer_newsletter, class: "text_field" %> Writer newsletter
+    </p>
+    <p>
+      <%= f.check_box :writer, class: "text_field" %> All writer communication
     </p>
     <%= f.submit "Save changes", class: "submit_btn" %>
   <% end %>
