--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -643,9 +643,18 @@ hr {
 .link_nrml {
     color: black;
     font-weight: 400;
+    &:hover {
+        color: #545454 !important;
+    }
+}
+
+.link_nrml_underline {
+    color: black;
+    font-weight: 400;
     text-decoration: underline !important;
     &:hover {
         color: #545454 !important;
+        text-decoration: underline !important;
     }
 }
 
