--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -1,5 +1,14 @@
 <style type="text/css">
   a:hover {text-decoration: underline !important;}
+  .content_wrapper {
+    max-width:670px;
+    background:#fff;
+    border-radius:3px;
+    text-align:center;
+    -webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+    -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+    box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+  }
   .content p {
      color:#455056;
      font-size:15px;
@@ -11,6 +20,17 @@
   .bottom_links a {
     font-family: 'Open Sans', sans-serif !important;
     text-decoration: underline !important;
+  }
+  .padding {
+       padding:0 35px;
+  }
+  @media only screen and (max-width: 640px) {
+    .padding {
+      padding: 0 15px;
+    }
+    .content_wrapper {
+      border-radius: 15px;
+    }
   }
 </style>
 <div marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; background-color: #ecf8f7;" leftmargin="0">
@@ -34,13 +54,13 @@
             <td style="height:20px;">&nbsp;</td>
           </tr>
           <tr>
-            <td>
-              <table width="95%" border="0" cellpadding="0" cellspacing="0" style="max-width:670px;background:#fff; border-radius:3px; text-align:center;-webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);-moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);box-shadow:0 6px 18px 0 rgba(0,0,0,.06);">
+            <td align="center">
+              <table class="content_wrapper" width="100%" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td style="height:40px;">&nbsp;</td>
                 </tr>
                 <tr class='content'>
-                  <td style="padding:0 35px;">
+                  <td class="padding">
                     <% if @newsletter.header.present? %>
                       <h1 style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Charter', 'Rubik',sans-serif;">
                         <%= @newsletter.header %>
@@ -77,8 +97,8 @@
                   Sent to <%= @newsletter.audience %>
                 </span>
                 <span style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0; padding-left: 4px;">-</span>
-                <a style="font-family: Sans serif; font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;" href="https://theteenmagazine.us14.list-manage.com/unsubscribe?u=5c2a24e15a906f29e2c6a9b72&id=363afe9160">
-                  Unsubscribe
+                <a style="font-size:12px; color:rgba(69, 80, 86, 0.7411764705882353); line-height:18px; margin:0 0 0;" href="https://www.theteenmagazine.com/email-preferences?email=<%= user.email %>&id=<%= user.id %>">
+                  Email Preferences
                 </a>
               </td>
             </tr>
