--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -95,7 +95,8 @@
                     <% @profile_img = pitch.user&.profile&.attached? ? image_tag(pitch&.user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img_small") : image_tag("profile_image.jpg", :class => "profile_img_small") %>
                     <%= link_to(@profile_img, pitch&.user) %>
                     <div><%= link_to(pitch.user.try(:full_name), pitch&.user, class: "link_nrml") %> pitched <%= link_to(pitch.title, pitch, class: "link_nrml") %>
-                    <br><span class="date_ago"><%= time_ago_in_words(pitch.created_at) %> ago</span></div>
+                      <br>
+                      <span class="date_ago"><%= time_ago_in_words(pitch.created_at) %> ago</span></div>
                   </li>
                 <% end %>
               <% end %>
@@ -106,6 +107,7 @@
         </div>
         <%= link_to("Extensions page", "/writers/#{@user.slug}/extensions", class: "link_grn") %><br>
         <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn") %><br>
+        <%= link_to("Email preferences", "/email-preferences?email=#{@user.email}&id=#{@user.id}", class: "link_grn") %><br>
         <div class="links"
           <% if @show_onboarding_full %>
             data-step data-index="5" data-onboarding-content="New applications have become open to you. If you want to apply to our editor team, we suggest having at four or more published articles on The Teen Magazine before applying to have the best chance."
@@ -121,7 +123,6 @@
   </div>
   <%= render "users/dashboard/guidelines" %>
 </div>
-
 <script type="text/javascript">
   var loaded = []
   $.fn.isOnScreen = function(){
@@ -161,7 +162,6 @@
     });
   });
 </script>
-
 <% if @show_onboarding_full || @show_editor_onboarding || @show_marketer_onboarding %>
   <%= javascript_include_tag "mdbootstrap/mdb.min" %>
   <%= javascript_include_tag "plugins/onboarding.min" %>
@@ -173,7 +173,6 @@
     });
   </script>
 <% end %>
-
 <% if @show_badge_popup %>
   <script type="text/javascript">
     $(document).ready(function(){
