--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -2,7 +2,7 @@
   <p class="mb-0 mt-0">Header</p>
   <%= f.text_field :header %>
   <p class="mb-0 mt-0">Message</p>
-  <%= f.text_area :message %>
+  <%= f.text_area :message, class: "ckeditor" %>
   <p class="mb-0 mt-0">Subject</p>
   <%= f.text_field :subject %>
   <%# <p class="mb-0 mt-0">Select featured posts for this newsletter <%= link_to("here", "/newsletters/#{@newsletter.id}/featured-posts", target: "_blank") %>
@@ -20,3 +20,40 @@
   <%= f.button "Save Changes", class: "newpost--new--profile mr-0 pl-4 pr-4 submit_modal", id: "submit-comment-modal-button" %>
 </div>
 <% end %>
+<script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
+<script type="text/javascript">
+  $('document').ready(function(){
+    var unsaved = false;
+
+    var editor = CKEDITOR.instances.post_content.on( 'change', function( evt ) {
+      unsaved = true;
+    });
+
+    $(":input").change(function(){ //triggers change in all input fields including text type
+      unsaved = true;
+    });
+
+    function unloadPage(){
+      if(unsaved){
+        return "You have unsaved changes on this page. Do you want to leave this page and discard your changes or stay on this page?";
+      }
+    }
+
+    window.onbeforeunload = unloadPage;
+  });
+  CKEDITOR.addCss('img{width: 55% !important; height: auto !important;margin-left: auto !important;margin-right: auto !important;display: block;}');
+  CKEDITOR.addCss('iframe, .instagram-media{margin: 1em auto !important;}');
+  CKEDITOR.addCss('h1,h2,h3,p{font-size: 1.3em;}a{color: #4ABEB6 !important;}');
+  CKEDITOR.addCss('h1 {font-size: 1.7rem; text-transform: capitalize;} h2 {font-size: 1.5rem; text-transform: capitalize;} h3 {font-size: 1.3rem; text-transform: capitalize;} h4 {font-size: 1.1rem;} h5 {font-size: 0.9rem;} h1, h2, h3, h4, h5, h6, span {margin: 10px 0;}');
+  CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #4ABEB6;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
+  window.WEBSPELLCHECKER_CONFIG = {
+    autoSearch: true,
+    serviceId: "<%= @service_id %>"
+  };
+</script>
+<style>
+  #cke_1_top .cke_button_icon {
+    background-image: url('<%= request.base_url %>/assets/ckeditor/skins/moono-lisa/icons_hidpi.png') !important;
+    background-size: 16px !important;
+  }
+</style>
