bug fix for images

--- a/app/views/application_mailer/custom_message_template.html.erb
+++ b/app/views/application_mailer/custom_message_template.html.erb
@@ -5,38 +5,45 @@
     <title>Reset Password Email Template</title>
     <meta name="description" content="Reset Password Email Template.">
     <style type="text/css">
+      a:hover {
+        text-decoration: underline !important;
+      }
       .content_wrapper {
-          max-width:670px;
-          background:#fff;
-          border-radius:3px;
-          text-align:center;
-          -webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
-          -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
-          box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
-        }
-        .content p {
-           color:#455056;
-           font-size:15px;
-           font-family: 'Rubik',sans-serif;
-           line-height:24px;
-           margin: 12px 0;
-           text-align: left !important;
-        }
-        .bottom_links a {
-          font-family: 'Open Sans', sans-serif !important;
-          text-decoration: underline !important;
-        }
+        max-width:670px;
+        background:#fff;
+        border-radius:3px;
+        text-align:center;
+        -webkit-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+        -moz-box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+        box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
+      }
+      .content p {
+          color:#455056;
+          font-size:15px;
+          font-family: 'Rubik',sans-serif;
+          line-height:24px;
+          margin: 12px 0;
+          text-align: left !important;
+      }
+      .bottom_links a {
+        font-family: 'Open Sans', sans-serif !important;
+        text-decoration: underline !important;
+      }
+      .padding {
+        padding: 0 35px;
+      }
+      .content img {
+        max-width: 100%;
+        height: auto !important;
+      }
+      @media only screen and (max-width: 640px) {
         .padding {
-             padding:0 35px;
+          padding: 0 15px;
         }
-        @media only screen and (max-width: 640px) {
-          .padding {
-            padding: 0 15px;
-          }
-          .content_wrapper {
-            border-radius: 15px;
-          }
+        .content_wrapper {
+          border-radius: 15px;
         }
+      }
     </style>
   </head>
   <body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; background-color: #ecf8f7;" leftmargin="0">
