--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -1,5 +1,7 @@
 <style type="text/css">
-  a:hover {text-decoration: underline !important;}
+  a:hover {
+    text-decoration: underline !important;
+  }
   .content_wrapper {
     max-width:670px;
     background:#fff;
@@ -10,19 +12,23 @@
     box-shadow:0 6px 18px 0 rgba(0,0,0,.06);
   }
   .content p {
-     color:#455056;
-     font-size:15px;
-     font-family: 'Rubik',sans-serif;
-     line-height:24px;
-     margin: 12px 0;
-     text-align: left !important;
+      color:#455056;
+      font-size:15px;
+      font-family: 'Rubik',sans-serif;
+      line-height:24px;
+      margin: 12px 0;
+      text-align: left !important;
   }
   .bottom_links a {
     font-family: 'Open Sans', sans-serif !important;
     text-decoration: underline !important;
   }
   .padding {
-       padding:0 35px;
+    padding:0 35px;
+  }
+  .content img {
+    max-width: 100%;
+    height: auto !important;
   }
   @media only screen and (max-width: 640px) {
     .padding {
