--- a/app/views/application_mailer/custom_message_template.html.erb
+++ b/app/views/application_mailer/custom_message_template.html.erb
@@ -5,9 +5,6 @@
     <title>Reset Password Email Template</title>
     <meta name="description" content="Reset Password Email Template.">
     <style type="text/css">
-      a:hover {
-        text-decoration: underline !important;
-      }
       .content_wrapper {
         max-width:670px;
         background:#fff;
@@ -25,8 +22,11 @@
           margin: 12px 0;
           text-align: left !important;
       }
-      .bottom_links a {
+      .bottom_links a, .content a {
         font-family: 'Open Sans', sans-serif !important;
+        text-decoration: underline !important;
+      }
+      .bottom_links a:hover, .content a:hover {
         text-decoration: underline !important;
       }
       .padding {
