--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -1,7 +1,4 @@
 <style type="text/css">
-  a:hover {
-    text-decoration: underline !important;
-  }
   .content_wrapper {
     max-width:670px;
     background:#fff;
@@ -19,8 +16,11 @@
       margin: 12px 0;
       text-align: left !important;
   }
-  .bottom_links a {
+  .bottom_links a, .content a {
     font-family: 'Open Sans', sans-serif !important;
+    text-decoration: underline !important;
+  }
+  .bottom_links a:hover, .content a:hover {
     text-decoration: underline !important;
   }
   .padding {
