--- a/app/views/newsletters/index.html.erb
+++ b/app/views/newsletters/index.html.erb
@@ -14,7 +14,7 @@
       <% @newsletters.each do |newsletter| %>
         <tr>
           <td><%= date_to_words(newsletter.created_at) %></td>
-          <td><%= link_to(newsletter.subject || newsletter.header, newsletter) %></td>
+          <td><%= link_to(@newsletter.subject || @newsletter.header || "Message from The Teen Magazine", newsletter) %></td>
           <td><%= date_to_words(newsletter.sent_at) || "Never sent" %></td>
           <td><%= newsletter.audience || "Readers" %></td>
           <td><%= newsletter.template %></td>
