--- a/app/views/newsletters/index.html.erb
+++ b/app/views/newsletters/index.html.erb
@@ -16,10 +16,10 @@
           <td><%= date_to_words(newsletter.created_at) %></td>
           <% @subject = newsletter.subject.present? ? newsletter.subject : (newsletter.header.present? ? newsletter.header : "Message from The Teen Magazine") %>
           <td><%= link_to(@subject, newsletter) %></td>
-          <td><%= date_to_words(newsletter.sent_at) || "Never sent" %></td>
+          <td><%= newsletter.sent_at.present? ? date_to_words(newsletter.sent_at) : "Not sent" %></td>
           <td><%= newsletter.audience || "Readers" %></td>
           <td><%= newsletter.template %></td>
-          <td><%= newsletter.recipients %></td>
+          <td><%= newsletter.sent_at.present? ? newsletter.recipients : 0 %></td>
         </tr>
       <% end %>
     </tbody>
